# elt-crypto

./: .gitignore  Makefile  README.md  extract.py  load.py  pyproject.toml  requirements.txt  viz.py
dataviz/: candlestick.py
dataviz/tables/: raw_market_caps.csv  raw_prices.csv  raw_total_volumes.csv
elt/: load.py
elt/transform/dbt_crypto/: dbt_project.yml
elt/transform/dbt_crypto/models/: marts.sql
elt/transform/dbt_crypto/models/staging/: stg_market_cap.sql  stg_total_volumes.sql
elt/transform/dbt_crypto/seeds/: raw_market_caps.csv  raw_total_volumes.csv
orchestration/: Dockerfile  docker-compose.yaml
orchestration/dags/: elt.py
transform/dbt_crypto/: dbt_project.yml  profiles.yml
transform/dbt_crypto/models/: details.sql  intermediate.sql  schema.yml  sources.yml  stock.sql
transform/dbt_crypto/models/staging/: schema.yml  stg_prices.sql  stg_total_volumes.sql
transform/dbt_crypto/seeds/: raw_market_caps.csv  raw_prices.csv  raw_total_volumes.csv
