[tool.poetry]
name = "elt-crypto"
version = "0.1.0"
description = ""
authors = ["Antoine <falieres.antoine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.20.0"
pandas = "^2.2.1"
duckdb = "^0.10.1"
dbt-duckdb = "^1.7.3"
logzero = "^1.7.0"
mplfinance = "^0.12.10b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
