[tool.poetry]
name = "elt-crypto"
version = "0.1.0"
description = ""
authors = ["Antoine <falieres.antoine@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
airbyte = "^0.7.6"
logzero = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
